로그인 폼 및 일부 디자인 수정

--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -131,9 +131,11 @@ table {
 @font-face {
   font-family: Grandstander;
   src: url(./fonts/Grandstander-VariableFont_wght.ttf);
+  font-display: block;
 }
 
 @font-face {
   font-family: Pretendard;
   src: url(./fonts/Pretendard-Regular.woff);
+  font-display: block;
 }
